# cpp_classes

./: Exceptions.md  Pre_post_conditions.md  README.md  const_cast.md
01_philosophy/: 01_ideas_directly.cpp  02_gsl_library.cpp  03_express_intent.cpp  03_for_each.cpp  04_statically_type_safety.cpp  05_compile_time_checks.cpp  06_run_time_checks.cpp  07_catch_runtime_errors.cpp  08_avoid_leaks_use_raii.cpp  09_time_and_space.cpp  10_immutability.cpp  11_encapsulate_messy.cpp
02_interfaces/: 01_hidden_interfaces.cpp  02_singleton.cpp  03_constraints.cpp  04_interface_template.cpp  05_packing_exceptions.cpp  06_not_null_or_optional.cpp  07_abi_pimpl_idiom.cpp
03_functions 1/03_functions/: 01_reference_passing.cpp  02_pure_functions.cpp  03_reference_overhead.cpp  04_move.cpp  05_forward.cpp  05_foward2.cpp  06_output_grouping.cpp  07_capture_referece_illegal.cpp  08_capture_value.cpp  08_capture_valuemove.cpp  09_capture_class.cpp  10_variable_arguments.cpp
04_classes 1/04_classes/: 01_runtime_overhead.cpp  02_interface.cpp  03_chain.cpp  04_helper_functions.cpp  05_protected_data.cpp  06_const_ref_members.cpp  07_rule_of_five.cpp  08_destructors.cpp  10_factory.cpp  (+9 more)
Pool/: CMakeLists.txt
Pool/include/: Directions.h  Distance.h  Fish.h  Pool.h  Position.h  Predator.h  Simulation.h  Victim.h
Pool/src/: Distance.cpp  Fish.cpp  Pool.cpp  Predator.cpp  Simulation.cpp  Victim.cpp  main.cpp
Pool/tests/: CMakeLists.txt  Predator_Test.cpp
StaticContainers/: CMakeLists.txt
Task2/: CMakeLists.txt
Task4/: CMakeLists.txt
XmlParserAndBuffer/: CMakeLists.txt
(+17 files in other folders)
